# quantumharmony

./: .dockerignore  .gitignore  AUDIT_CERTIFICATE.md  Cargo.toml  DEMO_GUIDE.md  Dockerfile  Dockerfile.amd64  Dockerfile.binary  Dockerfile.multinode  Dockerfile.production  FALCON_KDF_MIGRATION.md  LICENSE  PR_11_COMMENT_TEMPLATE.md  PR_DESCRIPTION.md  QSSH_QUEUE_README.md  QUICK_START.md  README.md  RUNTIME_UPGRADE_GUIDE.md  SECURITY.md  SECURITY_ANALYSIS.md  STATUS.md  TPS_BENCHMARK_README.md  VRF_3NODE_TEST_GUIDE.md  VRF_DETERMINISM_FIX.md  VRF_PR11_COMPLETION_SUMMARY.md  VRF_UNIT_TEST_RESULTS.md  chainspec-production.json  chainspec-v28.json  docker-compose-dashboard.yml  docker-compose-sync.yml  docker-compose.production.yml  docker-compose.quantum.yml  docker-compose.yml  production-3val-chainspec.json  start.sh
crates/pq-triple-ratchet/: Cargo.toml
crates/pq-triple-ratchet/src/: crypto.rs  error.rs  keys.rs  lib.rs  message.rs  ratchet.rs  x3dh.rs
node/: Cargo.toml  Cargo.toml.with_evm_backup  tmpclaude-2228-cwd
node-operator/: Cargo.toml  Dockerfile
node-operator/src/: auth.rs  keystore.rs  main.rs  messaging.rs  node.rs  rpc.rs
node/benches/: sphincs_tps_benchmark.rs  tps_benchmark.rs
node/src/: benchmarking.rs  chain_spec.rs  cli.rs  client.rs  coherence_gadget.rs  coherence_gossip.rs  coherence_inherent.rs  coherence_justification.rs  command.rs  entropy_gossip.rs  eth.rs  falcon_crypto.rs  falcon_crypto_tests.rs  high_perf_verify.rs  lib.rs  main.rs  optimistic_executor.rs  parallel_proposer.rs  pqc_oracle.rs  pqc_transport_tests.rs  pqtg_client.rs  priority_queue_rpc.rs  priority_queue_rpc_tests.rs  qpp.rs  qpp_integration.rs  qssh_queue_manager.rs  qssh_queue_qpp.rs  quantum_entropy.rs  quantum_manager.rs  quantum_vault.rs  round_coordinator.rs  segmented_pool.rs  service.rs  service.rs.with_evm_backup  software_entropy_vault.rs  sphincs_keygen.rs  sphincs_parallel_verify.rs  test_account_setup.rs  test_accounts.rs  test_accounts.rs.backup  (+4 more)
node/src/quantum_p2p/: identity.rs  identity_source.rs  mod.rs  network.rs  peer_selection.rs  protocol.rs  qkd_interface.rs  transport.rs
node/src/rpc/: axiom_attestation_rpc.rs  bgfl_rpc.rs  chunked_upgrade_rpc.rs  devonomics_rpc.rs  eth.rs  governance_rpc.rs  lib.rs  mesh_forum_rpc.rs  mod.rs  notarial_rpc.rs  oracle_rpc.rs  pqc_rpc.rs  runtime_segmentation_rpc.rs  runtime_upgrade_rpc.rs  sudo_rpc.rs  test_upgrade_rpc.rs  threshold_qrng_rpc.rs  transaction_gateway.rs
node/tests/: README.md  pqc_network_integration_tests.rs  pqc_transport_tests.rs  runtime_upgrade_tests.rs  sphincs_signing_test.rs  wallet_integration_tests.rs
pallets/axiom-attestation/: Cargo.toml
pallets/axiom-attestation/src/: lib.rs  mock.rs  runtime_api.rs  tests.rs
pallets/consensus-level/: Cargo.toml
pallets/consensus-level/src/: lib.rs
pallets/dev-governance/: Cargo.toml
pallets/dev-governance/src/: lib.rs
pallets/fideicommis/: Cargo.toml
pallets/fideicommis/src/: lib.rs  tests.rs
pallets/notarial/: Cargo.toml
pallets/notarial/src/: lib.rs  mock.rs  runtime_api.rs  tests.rs
pallets/pedersen-commitment/: Cargo.toml
pallets/pedersen-commitment/src/: benchmarking.rs  lib.rs  tests.rs
pallets/qkd-client/: Cargo.toml
pallets/qkd-client/src/: lib.rs
pallets/relay-coordination/: Cargo.toml
pallets/relay-coordination/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/ricardian-contracts/: Cargo.toml
pallets/ricardian-contracts/src/: lib.rs  tests.rs
pallets/runtime-segmentation/: Cargo.toml
pallets/runtime-segmentation/benches/: encoding_benchmark.rs  ternary_benchmark.rs
pallets/runtime-segmentation/src/: chunked_upgrade.rs  (+3 more)
pallets/sphincs-keystore/: Cargo.toml
pallets/substrate-validator-set/: Cargo.toml
pallets/topological-coherence/: Cargo.toml
pallets/validator-entropy/: Cargo.toml
pallets/validator-governance/: Cargo.toml
pallets/validator-rewards/: Cargo.toml
runtime/: Cargo.toml  Cargo.toml.backup  Cargo.toml.with_evm
runtime/src/: genesis_config_presets.rs  lib.rs  lib.rs.backup  lib.rs.bak  lib.rs.conflict-backup  lib.rs.with_evm_backup  quantum_config.rs  quantum_hasher.rs  quantum_signature.rs  wallet_api.rs
tools/runtime-upgrade/: Cargo.toml  README.md
wallet/: CHAIN_EXPOSURE_GUIDE.md  COMPLETE_QUANTUM_ARCHITECTURE.md  Cargo.toml  DEPLOYMENT_ARCHITECTURE.md  FINAL_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  QKD_NO_EXTRA_HARDWARE.md  QKD_P2P_INTEGRATION.md  QPP_THRESHOLD_PRESERVATION.md  QUANTUM_DAC_THEORY.md  QUANTUM_INSTANT_KYC.md  QUANTUM_KEY_DISTRIBUTION_ALTERNATIVES.md  QUANTUM_SIGNAL_APPLICATIONS.md  QUANTUM_STAR_TOPOLOGY_THRESHOLD.md  QUANTUM_TUNNEL.md  QUANTUM_TUNNEL_KYC_ARCHITECTURE.md  QUANTUM_TUNNEL_THEORY.md  QUANTUM_TUNNEL_TRADEOFFS.md  README.md  RUNTIME_COMPILATION_DESIGN.md  RUNTIME_UPDATES.md  SECURE_NODE_OPERATOR_WALLET.md  TACTICAL_UI_GUIDE.md  TAURI_README.md  WALLET_README.md  connect_from_anywhere.sh  connect_wallet_example.html  customSpec.json  index.html  quantumharmony-cli  run-tests.sh  start-wallet-with-rpc.sh  test-runtime-update.sh  wallet-ui-simple.html  wallet-ui.html
wallet/deploy/: DEV_WALLET_SETUP.md  Dockerfile  STEP_BY_STEP_DEV_WALLET.md  TAO_SIGNAL_AGENT_SETUP.md  docker-compose.yml  install.sh  kirq-node-setup.sh  nginx.conf  prometheus.yml
wallet/src/: docker.rs  lib.rs  light_client.rs  main.rs  no_clone.rs  qkd_key_derivation.rs  qpp_enforcement.rs  qpp_rpc_wallet.rs  qpp_sync_context.rs  qrng_client.rs  quantum_resource_manager.rs  quantum_state.rs  quantum_tunnel.rs  rpc_wallet.rs  tunnel_integration.rs  types.rs  wallet.rs
wallet/src-tauri/: Cargo.toml  tauri.conf.json
wallet/static/: cyber.html  index-old-wallet.html  index-tactical-broken.html  index.html  lcars-backup.html  lcars.html  qssh-lcars-exact.html  qssh-queue-manager-enhanced.html  qssh-queue-manager-v2.html  qssh-queue-manager.html  quantum-harmony-console.html  quantum-wallet-ui.html  quantumharmony-wallet.html  simple-nokia-wallet.html  tauri-dashboard.html  test.html
wallet/tests/: TEST_PLAN.md  e2e_scenarios.rs
(+241 files in other folders)
