[workspace]
members = [
	"node",
	"runtime",
	"node-operator",

	"pallets/substrate-validator-set",
	"pallets/validator-governance",
	"pallets/qkd-client",
	"pallets/runtime-segmentation",
	"pallets/validator-entropy",
	"pallets/relay-coordination",
	"pallets/pedersen-commitment",
	"pallets/dev-governance",
	"pallets/academic-vouch",
	"pallets/ricardian-contracts",
	"pallets/notarial",
	"tools/runtime-upgrade",
	# "wallet", # Temporarily excluded - missing warp dependency
	# quantum-crypto and proof-of-coherence are in /opt/polkadot-sdk fork

]
resolver = "2"

[workspace.package]
authors = ["Paraxiom"]
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/Paraxiom/quantumharmony"

[workspace.dependencies]
qkd-client = { path = "pallets/qkd-client", default-features = false }
async-trait = { version = "0.1", default-features = false }
bn = { package = "substrate-bn", version = "0.6", default-features = false }
clap = { version = "4.5", default-features = false, features = ["derive", "deprecated"] }
derive_more = { version = "0.99", default-features = false }
environmental = { version = "1.1.4", default-features = false }
ethereum = { version = "0.15.0", default-features = false }
ethereum-types = { version = "0.14.1", default-features = false }
evm = { version = "0.41.1", default-features = false }
futures = { version = "0.3.30", default-features = false }
hash-db = { version = "0.16.0", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
hex-literal = { version = "0.4.1", default-features = false }
impl-serde = { version = "0.4.0", default-features = false }
impl-trait-for-tuples = { version = "0.2.1", default-features = false }
jsonrpsee = { version = "0.24.9", default-features = false }
jsonrpsee-types = { version = "0.24.9", default-features = false }
jsonrpsee-core = { version = "0.24.9", default-features = false }
jsonrpsee-ws-server = { version = "0.15.1", default-features = false }
jsonrpsee-http-client = { version = "0.24.9", default-features = false }


blake2 = { version = "0.9.0", default-features = false }
bs58 = { version = "0.5.0", default-features = false, features = ["alloc"] }
kvdb-rocksdb = { version = "0.19.0", default-features = false }
libsecp256k1 = { version = "0.7.1", default-features = false }
log = { version = "0.4.21", default-features = false }
num_enum = { version = "0.7.2", default-features = false }
parity-db = { version = "0.4.13", default-features = false }
parking_lot = { version = "0.12.1", default-features = false }
rlp = { version = "0.5.2", default-features = false }
scale-codec = { package = "parity-scale-codec", path = "/opt/parity-scale-codec", default-features = false, features = ["derive"] }
codec = { package = "parity-scale-codec", path = "/opt/parity-scale-codec", default-features = false, features = ["derive"] }
scale-info = { version = "2.11.0", default-features = false, features = ["derive"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false }
sha3 = { version = "0.10", default-features = false }
similar-asserts = { version = "1.5.0", default-features = false }
sqlx = { version = "0.7.4", default-features = false, features = ["macros"] }
thiserror = { version = "1.0", default-features = false }
tokio = { version = "1.36.0", default-features = false }
priority-queue = "2.0.2"
tracing = "0.1.37"
tracing-futures = "0.2.5"
anyhow = "1.0"
futures-util = "0.3"
assert_matches = "1.5.0"  

hyper = { version = "1.3.1", features = ["full"] }
tower-http = { version = "0.5.2", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
lazy_static = "1.4.0"

env_logger = "0.11.3"
# Substrate Client
sc-basic-authorship = { path = "/opt/polkadot-sdk/substrate/client/basic-authorship" }
sc-block-builder = { path = "/opt/polkadot-sdk/substrate/client/block-builder" }
sc-chain-spec = { path = "/opt/polkadot-sdk/substrate/client/chain-spec" }
sc-cli = { path = "/opt/polkadot-sdk/substrate/client/cli", default-features = false }
sc-client-api = { path = "/opt/polkadot-sdk/substrate/client/api" }
sc-client-db = { path = "/opt/polkadot-sdk/substrate/client/db", default-features = false }
sc-consensus = { path = "/opt/polkadot-sdk/substrate/client/consensus/common" }
sc-consensus-aura = { path = "/opt/polkadot-sdk/substrate/client/consensus/aura" }
sc-consensus-grandpa = { path = "/opt/polkadot-sdk/substrate/client/consensus/grandpa" }
sc-consensus-manual-seal = { path = "/opt/polkadot-sdk/substrate/client/consensus/manual-seal" }
sc-executor = { path = "/opt/polkadot-sdk/substrate/client/executor" }
sc-keystore = { path = "/opt/polkadot-sdk/substrate/client/keystore" }
sc-network = { path = "/opt/polkadot-sdk/substrate/client/network" }
sc-network-common = { path = "/opt/polkadot-sdk/substrate/client/network/common" }
sc-network-gossip = { path = "/opt/polkadot-sdk/substrate/client/network-gossip" }
sc-network-sync = { path = "/opt/polkadot-sdk/substrate/client/network/sync" }
sc-offchain = { path = "/opt/polkadot-sdk/substrate/client/offchain" }
sc-rpc = { path = "/opt/polkadot-sdk/substrate/client/rpc" }
sc-rpc-api = { path = "/opt/polkadot-sdk/substrate/client/rpc-api" }
sc-service = { path = "/opt/polkadot-sdk/substrate/client/service", default-features = false }
sc-telemetry = { path = "/opt/polkadot-sdk/substrate/client/telemetry" }
sc-transaction-pool = { path = "/opt/polkadot-sdk/substrate/client/transaction-pool" }
sc-transaction-pool-api = { path = "/opt/polkadot-sdk/substrate/client/transaction-pool/api" }
sc-utils = { path = "/opt/polkadot-sdk/substrate/client/utils" }
# Substrate Primitive
sp-api = { path = "/opt/polkadot-sdk/substrate/primitives/api", default-features = false }
sp-block-builder = { path = "/opt/polkadot-sdk/substrate/primitives/block-builder", default-features = false }
sp-blockchain = { path = "/opt/polkadot-sdk/substrate/primitives/blockchain" }
sp-consensus = { path = "/opt/polkadot-sdk/substrate/primitives/consensus/common" }
sp-consensus-aura = { path = "/opt/polkadot-sdk/substrate/primitives/consensus/aura", default-features = false }
sp-consensus-grandpa = { path = "/opt/polkadot-sdk/substrate/primitives/consensus/grandpa", default-features = false }
sp-core = { path = "/opt/polkadot-sdk/substrate/primitives/core", default-features = false }
sp-crypto-hashing = { path = "/opt/polkadot-sdk/substrate/primitives/crypto/hashing", default-features = false }
sp-database = { path = "/opt/polkadot-sdk/substrate/primitives/database" }
sp-externalities = { path = "/opt/polkadot-sdk/substrate/primitives/externalities", default-features = false }
sp-genesis-builder = { path = "/opt/polkadot-sdk/substrate/primitives/genesis-builder", default-features = false }
sp-inherents = { path = "/opt/polkadot-sdk/substrate/primitives/inherents", default-features = false }
sp-io = { path = "/opt/polkadot-sdk/substrate/primitives/io", default-features = false }
sp-keyring = { path = "/opt/polkadot-sdk/substrate/primitives/keyring" }
sp-keystore = { path = "/opt/polkadot-sdk/substrate/primitives/keystore" }
sp-offchain = { path = "/opt/polkadot-sdk/substrate/primitives/offchain", default-features = false }
sp-runtime = { path = "/opt/polkadot-sdk/substrate/primitives/runtime", default-features = false }
sp-runtime-interface = { path = "/opt/polkadot-sdk/substrate/primitives/runtime-interface", default-features = false }
sp-session = { path = "/opt/polkadot-sdk/substrate/primitives/session", default-features = false }
sp-staking = { path = "/opt/polkadot-sdk/substrate/primitives/staking", default-features = false }
sp-state-machine = { path = "/opt/polkadot-sdk/substrate/primitives/state-machine", default-features = false }
sp-std = { path = "/opt/polkadot-sdk/substrate/primitives/std", default-features = false }
sp-storage = { path = "/opt/polkadot-sdk/substrate/primitives/storage", default-features = false }
sp-timestamp = { path = "/opt/polkadot-sdk/substrate/primitives/timestamp", default-features = false }
sp-transaction-pool = { path = "/opt/polkadot-sdk/substrate/primitives/transaction-pool", default-features = false }
sp-version = { path = "/opt/polkadot-sdk/substrate/primitives/version", default-features = false }
sp-weights = { path = "/opt/polkadot-sdk/substrate/primitives/weights", default-features = false }
# Substrate FRAME
frame-benchmarking = { path = "/opt/polkadot-sdk/substrate/frame/benchmarking", default-features = false }
frame-executive = { path = "/opt/polkadot-sdk/substrate/frame/executive", default-features = false }
frame-support = { path = "/opt/polkadot-sdk/substrate/frame/support", default-features = false }
frame-system = { path = "/opt/polkadot-sdk/substrate/frame/system", default-features = false }
frame-system-benchmarking = { path = "/opt/polkadot-sdk/substrate/frame/system/benchmarking", default-features = false }
frame-system-rpc-runtime-api = { path = "/opt/polkadot-sdk/substrate/frame/system/rpc/runtime-api", default-features = false }
pallet-aura = { path = "/opt/polkadot-sdk/substrate/frame/aura", default-features = false }
pallet-balances = { path = "/opt/polkadot-sdk/substrate/frame/balances", default-features = false }
pallet-grandpa = { path = "/opt/polkadot-sdk/substrate/frame/grandpa", default-features = false }
pallet-sudo = { path = "/opt/polkadot-sdk/substrate/frame/sudo", default-features = false }
pallet-timestamp = { path = "/opt/polkadot-sdk/substrate/frame/timestamp", default-features = false }
pallet-transaction-payment = { path = "/opt/polkadot-sdk/substrate/frame/transaction-payment", default-features = false }
pallet-transaction-payment-rpc = { path = "/opt/polkadot-sdk/substrate/frame/transaction-payment/rpc" }
pallet-transaction-payment-rpc-runtime-api = { path = "/opt/polkadot-sdk/substrate/frame/transaction-payment/rpc/runtime-api", default-features = false }
pallet-utility = { path = "/opt/polkadot-sdk/substrate/frame/utility", default-features = false }
pallet-contracts = { path = "/opt/polkadot-sdk/substrate/frame/contracts", default-features = false }
pallet-parameters = { path = "/opt/polkadot-sdk/substrate/frame/parameters", default-features = false }
pallet-insecure-randomness-collective-flip = { path = "/opt/polkadot-sdk/substrate/frame/insecure-randomness-collective-flip", default-features = false }

pallet-assets = { path = "/opt/polkadot-sdk/substrate/frame/assets", default-features = false }
pallet-indices = { path = "/opt/polkadot-sdk/substrate/frame/indices", default-features = false }
pallet-multisig = { path = "/opt/polkadot-sdk/substrate/frame/multisig", default-features = false }
pallet-node-authorization = { path = "/opt/polkadot-sdk/substrate/frame/node-authorization", default-features = false }
pallet-recovery = { path = "/opt/polkadot-sdk/substrate/frame/recovery", default-features = false }
pallet-session = { path = "/opt/polkadot-sdk/substrate/frame/session", default-features = false, features = ["historical"] }
pallet-session-benchmarking = { path = "/opt/polkadot-sdk/substrate/frame/session-benchmarking", default-features = false }
pallet-authorship = { path = "/opt/polkadot-sdk/substrate/frame/authorship", default-features = false }
pallet-uniques = { path = "/opt/polkadot-sdk/substrate/frame/uniques", default-features = false }
pallet-im-online = { path = "/opt/polkadot-sdk/substrate/frame/im-online", default-features = false }
#validator-set = { package = 'substrate-validator-set', branch = "polkadot-v1.9.0", git = 'https://github.com/gautamdhameja/substrate-validator-set.git', default-features = false }
substrate-validator-set = { path = "pallets/substrate-validator-set", default-features = false }
pallet-validator-governance = { path = "pallets/validator-governance", default-features = false }
pallet-registration = { path = "pallets/pallet-registration", default-features = false }
pallet-dev-governance = { path = "pallets/dev-governance", default-features = false }
pallet-academic-vouch = { path = "pallets/academic-vouch", default-features = false }
pallet-ricardian-contracts = { path = "pallets/ricardian-contracts", default-features = false }
pallet-notarial = { path = "pallets/notarial", default-features = false }
pallet-babe = { path = "/opt/polkadot-sdk/substrate/frame/babe", default-features = false }
sp-consensus-babe = { path = "/opt/polkadot-sdk/substrate/primitives/consensus/babe", default-features = false }
# Substrate Utility
frame-benchmarking-cli = { path = "/opt/polkadot-sdk/substrate/utils/frame/benchmarking-cli" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", path = "/opt/polkadot-sdk/substrate/utils/prometheus" }
substrate-build-script-utils = { path = "/opt/polkadot-sdk/substrate/utils/build-script-utils" }
substrate-frame-rpc-system = { path = "/opt/polkadot-sdk/substrate/utils/frame/rpc/system" }
substrate-test-runtime-client = { path = "/opt/polkadot-sdk/substrate/test-utils/runtime/client" }
substrate-wasm-builder = { path = "/opt/polkadot-sdk/substrate/utils/wasm-builder" }
schnorrkel = { version = "0.11.4", default-features = false }


# XCM
# xcm = { package = "staging-xcm", git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0", default-features = false }

# Arkworks
ark-bls12-377 = { version = "0.4.0", default-features = false, features = ["curve"] }
ark-bls12-381 = { version = "0.4.0", default-features = false, features = ["curve"] }
ark-bw6-761 = { version = "0.4.0", default-features = false }
ark-ec = { version = "0.4.0", default-features = false }
ark-ff = { version = "0.4.0", default-features = false }
ark-std = { version = "0.4.0", default-features = false }

# Frontier dependencies removed for governance-only runtime

# Governance pallets
pallet-democracy = { path = "/opt/polkadot-sdk/substrate/frame/democracy", default-features = false }
pallet-collective = { path = "/opt/polkadot-sdk/substrate/frame/collective", default-features = false }
pallet-treasury = { path = "/opt/polkadot-sdk/substrate/frame/treasury", default-features = false }
pallet-scheduler = { path = "/opt/polkadot-sdk/substrate/frame/scheduler", default-features = false }
pallet-preimage = { path = "/opt/polkadot-sdk/substrate/frame/preimage", default-features = false }
pallet-proxy = { path = "/opt/polkadot-sdk/substrate/frame/proxy", default-features = false }
pallet-identity = { path = "/opt/polkadot-sdk/substrate/frame/identity", default-features = false }
# Frontier Template
quantumharmony-runtime = { path = "runtime", default-features = false }
jsonrpsee-ws-client = { version = '0.22.5' }

trie-db = { git = "https://github.com/paritytech/trie", default-features = false }
sp-application-crypto = { path = "/opt/polkadot-sdk/substrate/primitives/application-crypto", default-features = false }

dashmap = "4.0"
hashbrown = "0.9.1"

getrandom = { version = "0.2", default-features = false, features = ["js"] }


[profile.release]
# Substrate runtime requires unwinding.
panic = "unwind"

[profile.production]
inherits = "release"
# Sacrifice compile speed for execution speed by using optimization flags:
# https://doc.rust-lang.org/rustc/linker-plugin-lto.html
lto = true
# https://doc.rust-lang.org/rustc/codegen-options/index.html#codegen-units
codegen-units = 1

[patch.crates-io]
parity-scale-codec = { path = "/opt/parity-scale-codec" }
parity-scale-codec-derive = { path = "/opt/parity-scale-codec/derive" }


