[package]
name = "node-operator"
version = "0.1.0"
edition = "2021"
authors = ["QuantumHarmony Team"]
description = "Quantum-safe node operator service for QuantumHarmony validators"
license = "GPL-3.0-only"

[[bin]]
name = "node-operator"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full", "process", "signal"] }

# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Post-quantum cryptography (SPHINCS+)
pqcrypto-sphincsplus = "0.7"
pqcrypto-traits = "0.3"

# Utilities
hex = "0.4"
sha2 = "0.10"
dirs = "5.0"
rand = "0.8"
base64 = "0.21"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
clap = { version = "4.5", features = ["derive", "env"] }
toml = "0.8"

# HTTP client for RPC
reqwest = { version = "0.12", features = ["json"] }

# File watching
notify = "6.1"

[dev-dependencies]
tempfile = "3.10"
