[package]
name = "quantumharmony-node"
version = "0.1.0"
license = "Unlicense"
build = "build.rs"
description = "A fresh FRAME-based Substrate node."
publish = false
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "insert-key"
path = "src/bin/insert_key.rs"

[[bin]]
name = "compare-keys"
path = "src/bin/compare_keys.rs"

[[bin]]
name = "generate-falcon-key"
path = "src/bin/generate_falcon_key.rs"

[[bin]]
name = "generate-prod-key"
path = "src/bin/generate_prod_key.rs"

[[bin]]
name = "generate-prod-chain-spec"
path = "src/bin/generate_prod_chain_spec.rs"

[[bin]]
name = "verify-seed-keypair"
path = "src/bin/verify_seed_keypair.rs"

[lib]
name = "quantumharmony_node"
path = "src/lib.rs"

[dependencies]
async-trait = { workspace = true }
clap = { workspace = true, features = ["derive"] }
futures = { workspace = true }
hex-literal = { workspace = true }
hex = { workspace = true }
jsonrpsee = { workspace = true, features = [
	"server",
	"macros",
	"http-client",
	"ws-client",
] }
jsonrpsee-types = { workspace = true }
jsonrpsee-core = { workspace = true }
log = { workspace = true }
scale-codec = { workspace = true }
serde_json = { workspace = true, features = ["arbitrary_precision"] }
jsonrpc-core = "18.0.0"
jsonrpc-derive = "18.0.0"
serde = { version = "1.0", features = ["derive"] }
sp-io = { workspace = true }
jsonrpc-core-client = "18.0.0"
dashmap = "4.0"
bs58 = { workspace = true }
num_cpus = "1.16"

# Substrate
prometheus-endpoint = { workspace = true }
sc-basic-authorship = { workspace = true }
sc-chain-spec = { workspace = true }
sc-cli = { workspace = true, features = ["pqc-transport"] }
sc-client-api = { workspace = true }
sc-consensus = { workspace = true }
sc-consensus-aura = { workspace = true }
sc-consensus-grandpa = { workspace = true }
sc-executor = { workspace = true }
sc-network = { workspace = true, features = ["pqc-transport"] }
sc-network-sync = { workspace = true }
sc-offchain = { workspace = true }
sc-rpc = { workspace = true }
sc-rpc-api = { workspace = true }
sc-service = { workspace = true }
sc-telemetry = { workspace = true }
sc-transaction-pool = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sp-api = { workspace = true, features = ["default"] }
sp-application-crypto = { workspace = true, features = ["default"] }
sp-block-builder = { workspace = true }
sp-blockchain = { workspace = true }
sp-consensus-aura = { workspace = true, features = ["default"] }
sp-consensus-grandpa = { workspace = true, features = ["default"] }
sp-core = { workspace = true, features = ["default"] }
sp-crypto-hashing = { workspace = true }
sp-genesis-builder = { workspace = true, features = ["default"] }
sp-inherents = { workspace = true, features = ["default"] }
sp-offchain = { workspace = true, features = ["default"] }
sp-runtime = { workspace = true, features = ["default"] }
sp-session = { workspace = true, features = ["default"] }
sp-timestamp = { workspace = true, features = ["default"] }
sp-transaction-pool = { workspace = true, features = ["default"] }
sp-keystore = { workspace = true }
sp-consensus = { workspace = true, features = ["default"] }

# RPC Dependencies
frame-system-rpc-runtime-api = { workspace = true }
pallet-transaction-payment-rpc = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }
substrate-frame-rpc-system = { workspace = true }

# Benchmarking Dependencies
frame-benchmarking = { workspace = true, optional = true }
frame-benchmarking-cli = { workspace = true, optional = true }
frame-system = { workspace = true }
frame-support = { workspace = true }
pallet-transaction-payment = { workspace = true }

# Local Pallets
pallet-runtime-segmentation = { path = "../pallets/runtime-segmentation" }
pallet-im-online = { workspace = true, features = ["std"] }
pallet-validator-rewards = { path = "../pallets/validator-rewards", default-features = false }
pallet-notarial = { path = "../pallets/notarial", default-features = false }
pallet-mesh-forum = { path = "../pallets/mesh-forum", default-features = false }
pallet-devonomics = { path = "../pallets/devonomics", default-features = false }

# Missing pallet added here to fix your error
pallet-pedersen-commitment = { path = "../pallets/pedersen-commitment", default-features = false }
pallet-sphincs-keystore = { path = "../pallets/sphincs-keystore", default-features = false }

# Quantum SDK Pallets
pallet-proof-of-coherence = { git = "https://github.com/Paraxiom/polkadot-sdk", branch = "daily/2025-10-16-sphincs-deterministic-keys", default-features = false }
pallet-quantum-crypto = { git = "https://github.com/Paraxiom/polkadot-sdk", branch = "daily/2025-10-16-sphincs-deterministic-keys", default-features = false }

# Runtime
quantumharmony-runtime = { workspace = true, features = ["std"] }

# Internal node libs
jsonrpsee-ws-server = { workspace = true }
tokio = { workspace = true }
priority-queue = { workspace = true }
sharks = "0.5"
aes-gcm = "0.10"
rand = "0.8"
parking_lot = { workspace = true }
reqwest = { version = "0.11", features = [
	"json",
	"rustls-tls",
], default-features = false }
zeroize = "1.7"
sha3 = "0.10"
once_cell = "1.19"
base64 = "0.21"
tokio-tungstenite = "0.20"

# Post-Quantum Cryptography
pqcrypto-falcon = "0.3"
pqcrypto-traits = "0.3"
pqcrypto-kyber = "0.8"
pqcrypto-sphincsplus = "0.7"

tracing = { workspace = true }
tracing-futures = { workspace = true }
anyhow = { workspace = true }
futures-util = { workspace = true }
assert_matches = { workspace = true }
hyper = { workspace = true }
tower-http = { workspace = true }
tower = { workspace = true }
lazy_static = { workspace = true }
env_logger = { workspace = true }
sp-keyring = { workspace = true }

[dependencies.tracing-subscriber]
version = "0.3.18"
features = ["env-filter"]

[build-dependencies]
substrate-build-script-utils = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "tps_benchmark"
harness = false

[features]
default = ["rocksdb", "std", "pqc-transport"]
std = [
	"quantumharmony-runtime/std",
	"pallet-pedersen-commitment/std",
	"pallet-sphincs-keystore/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-benchmarking-cli/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
	"quantumharmony-runtime/runtime-benchmarks",
	"pallet-pedersen-commitment/runtime-benchmarks",
	"pallet-sphincs-keystore/runtime-benchmarks",
]
pqc-transport = ["sc-network/pqc-transport", "sc-cli/pqc-transport"]
rocksdb = [
	"sc-cli/rocksdb",
	"sc-service/rocksdb",
	"quantumharmony-runtime/with-rocksdb-weights",
]
paritydb = ["quantumharmony-runtime/with-paritydb-weights"]
